add data validation and sanitization, websocket security and testing coverage.
add integration tests, e2e testsNo backend test coverage reporting, sql injection protection via parameterized queries, xss protections on rich text/mentions, rate limiting per user/ip, file type validation for uploads, authentication on websocket connections, message validations, connection limits

--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,8 @@
     "dev": "tsc -w & nodemon -q dist/cjs/server.js",
     "smoke:profile": "node scripts/smokeProfile.mjs",
     "lint": "eslint . --ext .ts",
-    "test": "jest --config=jest.config.cjs"
+    "test": "jest --config=jest.config.cjs",
+    "test:coverage": "jest --config=jest.config.cjs --coverage"
   },
   "author": "Les YAMBOS",
   "license": "ISC",
